<resources>
    <string name="app_name">Bank_app</string>
    <string name="serverIP">http://192.168.1.3:8080</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="account">Account</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait</string>
    <string name="number">Number</string>
    <string name="balance">Balance</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="agree">Agree</string>
    <string name="send">Send</string>
    <string name="error">Error</string>
    <string name="error_falseClient">Error Occurred: While getting client information</string>
    <string name="error_falseAccount">Error Occurred: While getting Account information</string>
    <string name="error_falseStats">Error Occurred: While getting stats data</string>
    <string name="error_falseCategory">Error Occurred: While getting Categories</string>
    <string name="error_JSON">Error Occurred: [Server\'s JSON response might be invalid]!</string>
    <string name="error_404">Error Occurred: Requested resource not found</string>
    <string name="error_500">Error Occurred: Something went wrong at server end</string>
    <string name="error_unexpected">Unexpected Error Occurred! [Most common Error: Device might not be connected to Internet or remote server is not up and running]</string>
    <string name="error_chooseAccount">Please choose an account</string>
    <string name="error_reconnect">Error occurred! Please reconnect</string>
    <string name="error_minRequestAmount">Requested amount needs to be more than 1$</string>
    <string name="error_storagePermission">Error while creating media file, check storage permissions</string>
    <string name="error_fileNotFound">File not found: </string>
    <string name="error_fileAccess">Error accessing file: </string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_connexion">Connexion</string>
    <string name="login_invalidEmail">Invalid Email</string>
    <string name="login_emptyEmail">Email can\'t be empty</string>
    <string name="login_emptyPassword">Password can\'t be empty</string>
    <string name="login_shortPassword">Password too short</string>
    <string name="tabs_accountInformation">Account information</string>
    <string name="tabs_transaction">Transactions</string>
    <string name="tabs_transferMoney">Transfer Money</string>
    <string name="tabs_requestMoney">Request Money</string>
    <string name="accountInfo_holder">Holder</string>
    <string name="accountInfo_type">Account type</string>
    <string name="accountInfo_banker">Banker</string>
    <string name="transactionAccountCard_current_account">Current Account</string>
    <string name="transactionAccountCard_balance">Balance</string>
    <string name="transactionCard_old_balance">Old Balance</string>
    <string name="transactionCard_new_balance">New Balance</string>
    <string name="transactionCard_to_account_number">Receiver Account number</string>
    <string name="transactionCard_from_account_number">Sender Account number</string>
    <string name="advancedSearch_maximum_date">Maximum Date</string>
    <string name="advancedSearch_minimum_date">Minimum Date</string>
    <string name="advancedSearch_category">Category</string>
    <string name="advancedSearch_received">Show received transactions</string>
    <string name="advancedSearch_sent">Show sent transactions</string>
    <string name="advancedSearch_reset"><u>Reset</u></string>
    <string name="advancedSearch_set">SET</string>
    <string name="transaction_noMoreDate">No more data!</string>
    <string name="transaction_removeFilter">Remove Filter</string>
    <string name="myStat_title">Net Balance</string>
    <string name="myStat_accountNumber">Account Number:</string>
    <string name="myStat_netBalance">Current month net Balance:</string>
    <string name="myStat_CurrShow"><u>Showing last %1$d months</u></string>
    <string name="myStatDialog_Show">Months to show: </string>
    <string name="myStat_in">Incomings</string>
    <string name="myStat_out">Outgoings</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="requestMoney_requestingAmount">Requesting amount</string>
    <string name="requestMoney_generate">Generate</string>
    <string name="requestMoney_stored">Stored at: %1$s</string>
    <string name="transferMoney_SendingTo">Transfer details</string>
    <string name="transferMoney_IBANAddress">IBAN Address</string>
    <string name="transfer_invalidIBAN">Invalid IBAN</string>
    <string name="transfer_invalidAmount">Invalid Amount</string>
    <string name="transfer_minAmount">Amount needs to be more than $0.01</string>
    <string name="transfer_insFunds">Insufficient funds</string>
    <string name="transferConfirmation_title">Transfer Confirmation</string>
    <string name="transferConfirmation_msg">Do you really want to send %1$s To IBAN: %2$s</string>
    <string name="transfer_scanqr">Scan a QR Code</string>
    <string name="transfer_scanqrcancel">Cancelled</string>
    <string name="account_holder">Holder</string>
    <string name="account_number">Number</string>
    <string name="account_type">Type</string>
    <string name="account_balance">Balance</string>
    <string name="account_banker">Banker</string>
    <string name="Account">Account</string>
    <string name="buttonCard">Show</string>
    <string name="drawer_item_account_info">Account information</string>
    <string name="drawer_item_section_money">Move money</string>
    <string name="drawer_item_transfer_money">Transfer money</string>
    <string name="drawer_item_pay_bills">Pay bills</string>
    <string name="drawer_item_see_transaction">See transactions</string>
    <string name="drawer_item_statsGraphic">My stats</string>
    <string name="drawer_item_connect">Connect with us</string>
    <string name="drawer_item_find_atm">Find ATM/Agency</string>
    <string name="drawer_item_contact_us">Contact us</string>
    <string name="drawer_item_disconnect">Disconnect</string>
    <string name="drawer_item_send_request">Request</string>
    <string name="request_debitCard">Debit Card Request</string>
    <string name="hello_blank_fragment">blank</string>
    <string name="spinner_prompt">Choose a currency</string>
    <string name="drawer_item_exchange">Exchange rates</string>
    <string name="dialog_title">Base currency</string>
    <string name="eu">EUR = Euro</string>
    <string name="gb">GBP = United Kingdom Pounds</string>
    <string name="ca">CAD = Canadian Dollars</string>
    <string name="tn">TND = Tunisian Dinar</string>
    <string name="jp">JPY = Japanese Yen</string>
    <string name="us">USD = United States dollars</string>
    <string name="ae">United Arab Emirates Dirham</string>
    <string name="af">Afghan Afghani</string>
    <string name="al">Albanian Lek</string>
    <string name="am">Armenian Dram</string>
    <string name="an">Netherlands Antillean Guilder</string>
    <string name="ao">Angolan Kwanza</string>
    <string name="ar">Argentine Peso</string>
    <string name="au">Australian Dollar</string>
    <string name="aw">Aruban Florin</string>
    <string name="az">Azerbaijani Manat</string>
    <string name="ba">Bosnia-Herzegovina Convertible Mark</string>
    <string name="bb">Barbadian Dollar</string>
    <string name="bd">Bangladeshi Taka</string>
    <string name="bg">Bulgarian Lev</string>
    <string name="bh">Bahraini Dinar</string>
    <string name="bi">Burundian Franc</string>
    <string name="bm">Bermudan Dollar</string>
    <string name="bn">Brunei Dollar</string>
    <string name="bo">Bolivian Boliviano</string>
    <string name="br">Brazilian Real</string>
    <string name="bs">Bahamian Dollar</string>
    <string name="btc">Bitcoin</string>
    <string name="bt">Bhutanese Ngultrum</string>
    <string name="bw">Botswanan Pula</string>
    <string name="byn">Belarusian Ruble</string>
    <string name="byr">Belarusian Ruble (pre-2016)</string>
    <string name="bz">Belize Dollar</string>
    <string name="cd">Congolese Franc</string>
    <string name="ch">Swiss Franc</string>
    <string name="clf">Chilean Unit of Account (UF)</string>
    <string name="clp">Chilean Peso</string>
    <string name="cn">Chinese Yuan</string>
    <string name="co">Colombian Peso</string>
    <string name="cr">Costa Rican Colón</string>
    <string name="cuc">Cuban Convertible Peso</string>
    <string name="cup">Cuban Peso</string>
    <string name="cv">Cape Verdean Escudo</string>
    <string name="cz">Czech Republic Koruna</string>
    <string name="dj">Djiboutian Franc</string>
    <string name="dk">Danish Krone</string>
    <string name="dop">Dominican Peso</string>
    <string name="dz">Algerian Dinar</string>
    <string name="ee">Estonian Kroon</string>
    <string name="eg">Egyptian Pound</string>
    <string name="er">Eritrean Nakfa</string>
    <string name="et">Ethiopian Birr</string>
    <string name="fj">Fijian Dollar</string>
    <string name="fk">Falkland Islands Pound</string>
    <string name="ge">Georgian Lari</string>
    <string name="gg">Guernsey Pound</string>
    <string name="gh">Ghanaian Cedi</string>
    <string name="gi">Gibraltar Pound</string>
    <string name="gm">Gambian Dalasi</string>
    <string name="gn">Guinean Franc</string>
    <string name="gt">Guatemalan Quetzal</string>
    <string name="gy">Guyanaese Dollar</string>
    <string name="hk">Hong Kong Dollar</string>
    <string name="hn">Honduran Lempira</string>
    <string name="hr">Croatian Kuna</string>
    <string name="ht">Haitian Gourde</string>
    <string name="hu">Hungarian Forint</string>
    <string name="id">Indonesian Rupiah</string>
    <string name="il">Israeli New Sheqel</string>
    <string name="im">Manx pound</string>
    <string name="in">Indian Rupee</string>
    <string name="iq">Iraqi Dinar</string>
    <string name="ir">Iranian Rial</string>
    <string name="contact_Title">Have a question ?</string>
    <string name="contact_first_name_hint">FIRST NAME</string>
    <string name="contact_last_name_hint">LAST NAME</string>
    <string name="contact_email_hint">EMAIL</string>
    <string name="contact_message_hint">MESSAGE</string>
    <string name="contact_button">SEND MESSAGE</string>
    <string name="contact_siege_general">Siège et Direction Générale Tunisie</string>
    <string name="contact_address">Rue du Lac Ghar El Mellh Imm Ezzeddine Ben Ayed 1053 Les Berges du Lac- Tunis-Tunisie</string>
    <string name="contact_tel">Tél : +216 71 962 030</string>
    <string name="contact_fax">Fax : +216 71 961 299</string>
    <string name="contact_email">sbenhariz@bfigroupe.com</string>
    <string name="contact_siege_algerie">Bureau Algérie</string>
    <string name="contact_address_algerie">8 Rue des Freres KADRI (ex Savoie) HYDRA Alger</string>
    <string name="contact_tel_algerie">Tél : +213 21 48 18 71</string>
    <string name="contact_fax_algerie">Fax : +213 21 60 61 52</string>
    <string name="contact_email1_algerie">ksaffar@bfigroupe.com</string>
    <string name="contact_email2_algerie">sbenhariz@bfigroupe.com</string>
    <string name="contact_siege_maroc">Bureau Maroc</string>
    <string name="contact_address_maroc">Rue 4 Août Résidence Belvue Quartier Racine Casablanca El Maarif - Maroc</string>
    <string name="contact_tel_maroc">Tél. : +212 522 39 44 59</string>
    <string name="contact_fax_maroc">Fax : +212 522 39 50 13</string>
    <string name="contact_email_maroc">ksaffar@bfigroupe.com</string>
    <string name="money">Money</string>
</resources>