<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/requestMoney_Account_Card">

        <ImageView
            android:src="@drawable/account_card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/requestMoney_accountCard_Text"
                android:text="@string/transactionAccountCard_current_account"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="13dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                android:textSize="18sp"
                android:fontFamily="serif" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/requestMoney_accountCard_NumAccount"
                android:layout_below="@id/requestMoney_accountCard_Text"
                android:text="1236-5984-3232-1514"
                android:textColor="@android:color/white"
                android:layout_marginLeft="15dp"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/requestMoney_accountCard_Balance"
                android:text="$64,846"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="7dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_below="@id/requestMoney_Account_Card"
        android:padding="10dp"
        android:background="@color/material_blue_grey_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/requestMoney_requestingAmount"
        android:id="@+id/requestMoney_Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="serif"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestMoney_Title"
        android:hint="@string/money"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/ic_attach_money"
        app:met_iconPadding="0dp"
        android:id="@+id/requestMoney_Amount"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:inputType="number"
        app:met_errorColor="@color/material_red_800"/>

    <com.dd.morphingbutton.MorphingButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/requestMoney_generate"
        android:id="@+id/requestMoney_Generate"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_below="@id/requestMoney_Generate"/>
    
</RelativeLayout>