<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recentActivitiesAS_titleDate"
        android:text="Select Date Range"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recentActivitiesAS_minDateCard"
        app:cardElevation="5dp"
        android:layout_below="@id/recentActivitiesAS_titleDate"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/material_amber_50"
                android:gravity="center"
                android:paddingRight="10dp">
            <TextView
                android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advancedSearch_minimum_date"
                android:gravity="center_vertical"
                />
            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recentActivitiesAS_dateInputMin"
                    android:focusable="false"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recentActivitiesAS_MaxDateCard"
        app:cardElevation="5dp"
        android:layout_below="@id/recentActivitiesAS_minDateCard"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/material_amber_50"
                android:gravity="center"
                android:paddingRight="7dp">
                <TextView
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advancedSearch_maximum_date"
                    android:gravity="center_vertical"
                    />
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recentActivitiesAS_dateInputMax"
                    android:focusable="false"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recentActivitiesAS_MaxDateCard"
        android:id="@+id/recentActivitiesAS_titleCategory"
        android:text="Select Category"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recentActivitiesAS_CategoryCard"
        app:cardElevation="5dp"
        android:layout_below="@id/recentActivitiesAS_titleCategory"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/material_amber_50"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="38dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">
                <TextView
                    android:drawableLeft="@android:drawable/ic_menu_agenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advancedSearch_category"
                    android:gravity="center_vertical"
                    />
            </RelativeLayout>
            <Spinner
                android:id="@+id/recentActivitiesAS_Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recentActivitiesAS_ReceivedCheck"
        android:layout_below="@id/recentActivitiesAS_CategoryCard"
        android:text="@string/advancedSearch_received"
        android:checked="true"
        android:gravity="center"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:paddingLeft="10dp"/>
    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recentActivitiesAS_SentCheck"
        android:layout_below="@id/recentActivitiesAS_ReceivedCheck"
        android:text="@string/advancedSearch_sent"
        android:gravity="center"
        android:checked="true"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recentActivitiesAS_SentCheck"
        android:layout_alignParentRight="true"
        android:text="@string/advancedSearch_reset"
        android:textColor="@color/blue_pressed"
        android:layout_marginRight="7dp"
        android:clickable="true"
        android:id="@+id/recentActivitiesAS_Reset"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advancedSearch_set"
        android:layout_below="@id/recentActivitiesAS_Reset"
        android:id="@+id/recentActivitiesAS_buttonSet"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_arrow_back_white_48dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/recentActivitiesAS_Reset"
        android:layout_alignEnd="@+id/recentActivitiesAS_Reset"
        android:id="@+id/recentActivitiesAS_FABReturn"
        app:elevation="7dp" />


</RelativeLayout>
</ScrollView>
</LinearLayout>